--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react-dom": "^17.0.5",
     "@types/react-redux": "^7.1.16",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
